@@ -1,3 +1,5 @@
+* Refactor Element#replace to remove browser sniffs. [jddalton]
+
 * Fix IE issue with Element#replace removing childNodes of the returned element. Closes #11225. [Rukawa, jddalton]
 
 * Refactor the Element constructor to remove browser sniffs. [jddalton]
